# huak

./: .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile.toml  README.md  architecture.md  deny.toml  index.html  mkdocs.yaml  pyproject.toml  sitemap.xml
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  dependabot.yaml
.github/FEATURE_REQUEST_TEMPLATE/: FEATURE_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md
.github/PR_REQUEST/: PR_REQUEST_TEMPLATE.md
.github/PULL_REQUEST_TEMPLATE/: PULL_REQUEST.md
.github/workflows/: build-publish-pypi.yaml  build-wheel.yaml  build.yml  ci-python.yaml  ci-rust.yaml  ci.yaml  ci.yml  docs.yml  format.yml  lint.yml  on-release.yaml  package.yml  pypi-release.yaml  pypi.yaml  release.yaml  spell-check.yaml  test-rust.yaml  tests.yml
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
crates/huak-cli/: Cargo.toml
crates/huak-cli/src/: cli.rs  error.rs  main.rs
crates/huak-cli/tests/: mod.rs
crates/huak-cli/tests/snapshots/: r#mod__tests__add_help.snap  r#mod__tests__completion_help.snap  r#mod__tests__freeze_help.snap  r#mod__tests__help-2.snap  r#mod__tests__help.snap  r#mod__tests__init_help.snap  r#mod__tests__install_help.snap  r#mod__tests__python_help.snap  r#mod__tests__remove_help.snap  r#mod__tests__run_help.snap  r#mod__tests__test_help.snap  r#mod__tests__version.snap  r#mod__tests__version_help.snap
crates/huak-dev/: Cargo.toml
crates/huak-home/: Cargo.toml
crates/huak-package-manager/: Cargo.toml
crates/huak-package-manager/src/: config.rs  dependency.rs  environment.rs  error.rs  fs.rs  git.rs  lib.rs  manifest.rs  metadata.rs  package.rs  python_environment.rs  settings.rs  sys.rs  version.rs  workspace.rs
crates/huak-package-manager/src/ops/: activate.rs  add.rs  build.rs  clean.rs  format.rs  init.rs  install.rs  lint.rs  mod.rs  new.rs  publish.rs  python.rs  remove.rs  run.rs  test.rs  toolchain.rs  update.rs  version.rs
crates/huak-pyproject-toml/: Cargo.toml
crates/huak-pyproject-toml/src/: error.rs  lib.rs  utils.rs
crates/huak-python-manager/: Cargo.toml  README.md  requirements-dev.txt
crates/huak-python-manager/scripts/: generate_python_releases.py  generated_python_releases.json  generated_python_releases.parquet
crates/huak-python-manager/src/: cli.rs  error.rs  install.rs  lib.rs  main.rs  releases.rs  resolve.rs  version.rs
crates/huak-toolchain/: Cargo.toml  README.md
crates/huak-toolchain/src/: channel.rs  error.rs  install.rs  lib.rs  path.rs  resolve.rs  settings.rs  tools.rs
crates/huak-workspace/: Cargo.toml
crates/huak_cli/: Cargo.toml
crates/huak_cli/src/: cli.rs  error.rs  main.rs
crates/huak_cli/src/cmd/: activate.rs  add.rs  build.rs  clean.rs  format.rs  init.rs  install.rs  lint.rs  mod.rs  new.rs  publish.rs  python.rs  remove.rs  run.rs  test.rs  update.rs  version.rs
crates/huak_cli/tests/: mod.rs  test_activate.rs  test_add.rs  test_build.rs  test_clean.rs  test_completion.rs  test_fix.rs  test_fmt.rs  test_help.rs  test_init.rs  test_install.rs  test_lint.rs  test_new.rs  test_publish.rs  test_python.rs  test_remove.rs  test_run.rs  test_test.rs  test_update.rs  test_version.rs
crates/huak_cli/tests/snapshots/: r#mod__test_add__tests__help.snap  r#mod__test_build__tests__help.snap  r#mod__test_fmt__tests__help.snap  r#mod__test_help__tests__activate_help.snap  r#mod__test_help__tests__build_help.snap  r#mod__test_help__tests__help.snap  r#mod__test_help__tests__python_help.snap  r#mod__test_help__tests__test_help.snap  r#mod__test_help__tests__update_help.snap  r#mod__test_help__tests__version_help.snap  r#mod__test_init__tests__help.snap  r#mod__test_install__tests__help.snap  r#mod__test_remove__tests__help.snap  r#mod__test_run__tests__help.snap  r#mod__test_update__tests__help.snap  r#mod__test_version__tests__version.snap  r#mod__test_version__tests__version_help.snap  r#mod__tests__activate_help.snap  r#mod__tests__activate_help.snap.new  r#mod__tests__add_help.snap.new  r#mod__tests__build_help.snap  r#mod__tests__build_help.snap.new  r#mod__tests__clean_help.snap  r#mod__tests__clean_help.snap.new  r#mod__tests__completion_help.snap.new  r#mod__tests__fix_help.snap  r#mod__tests__fix_help.snap.new  r#mod__tests__fmt_help.snap  r#mod__tests__fmt_help.snap.new  r#mod__tests__help-2.snap  r#mod__tests__help.snap  r#mod__tests__help.snap.new  r#mod__tests__init_help.snap  r#mod__tests__init_help.snap.new  r#mod__tests__install_help.snap  r#mod__tests__install_help.snap.new  r#mod__tests__lint_help.snap  r#mod__tests__lint_help.snap.new  r#mod__tests__new_help.snap  r#mod__tests__new_help.snap.new  (+51 more)
crates/huak_dev/: Cargo.toml
crates/huak_fmt/: Cargo.toml
crates/huak_home/: Cargo.toml
crates/huak_ops/: Cargo.toml
crates/huak_ops/src/: config.rs  dependency.rs  environment.rs  error.rs  fs.rs  lib.rs  metadata.rs  package.rs  python_environment.rs  sys.rs  version.rs  workspace.rs
crates/huak_ops/src/ops/: add.rs  build.rs  clean.rs  format.rs  init.rs  install.rs  lint.rs  mod.rs  publish.rs  python.rs  remove.rs  run.rs  test.rs  update.rs  version.rs
crates/huak_package_manager/: Cargo.toml
crates/huak_python_manager/: Cargo.toml  README.md
crates/huak_python_manager/scripts/: generate_python_releases.py  generated_python_releases.parquet
crates/huak_python_manager/src/: cli.rs  install.rs  lib.rs  main.rs  releases.rs  resolve.rs  version.rs
crates/huak_python_package_manager/: Cargo.toml
dev-resources/: planning.md
dev-resources/mock-project/: pyproject.toml
development/: index.html
docs/: CONTRIBUTING.md  architecture.md  design_doc.md  development.md  index.md  user_guide.md
huak-py/: Makefile  pyproject.toml
resources/: readme
resources/mock-project/: .gitignore  pyproject.toml
resources/mock-project/src/mock_project/: fmt_me.py
resources/mock-project/tests/: test_package.py
search/: search_index.json
src/: lib.rs  main.rs
test_files/: test_bashrc
user_guide/: index.html
(+196 files in other folders)
