[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.73"
authors = ["Chris Pryer <cnpryer@gmail.com>"]
license = "MIT"

[workspace.dependencies]
clap = { version = "4.4.2", features = ["cargo", "derive"] }
glob = "0.3.1"
pep440_rs = "0.3.11"
pep508_rs = "0.2.1"
tempfile = "3.7.1"
termcolor = "1.2.0"
thiserror = "1.0.48"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
pedantic = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
too_many_lines = "allow"
