[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.74"
authors = ["Chris Pryer <cnpryer@gmail.com>"]
license = "MIT"

[workspace.dependencies]
clap = { version = "4.4.2", features = ["cargo", "derive"] }
colored = "2.0.4"
glob = "0.3.1"
hex = "0.4.3"
human-panic = "1.1.5"
lazy_static = "1.4.0"
pep440_rs = "0.4.0"
pep508_rs = "0.3.0"
regex = "1.10.2"
sha2 = "0.10.8"
tempfile = "3.7.1"
termcolor = "1.2.0"
thiserror = "1.0.48"
toml_edit = { version = "0.21.0", features = ["serde", "display"] }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
pedantic = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
too_many_lines = "allow"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.10.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
