[project]
name = "huak"
version = "0.0.17"
description = "A Python package manager written in Rust inspired by Cargo."
authors = [
    {email = "cnpryer@gmail.com"},
    {name = "Chris Pryer"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
]

[project.urls]
issues = "https://github.com/cnpryer/huak/issues"
documentation = "https://github.com/cnpryer/huak"
homepage = "https://github.com/cnpryer/huak"
repository = "https://github.com/cnpryer/huak"

[tool.maturin]
bindings = "bin"

[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"
