[package]
name = "huak-package-manager"
version = "0.0.0"
readme.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lib]
# We currently don't run doctest while the library is private.
doctest = false

[dependencies]
clap.workspace = true
git2 = "0.17.2"
glob.workspace = true
indexmap = "2.0.0"
pep440_rs.workspace = true
pep508_rs.workspace = true
pyproject-toml = "0.7.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tempfile.workspace = true
termcolor.workspace = true
thiserror.workspace = true
toml = { version = "0.8.2", features = ["preserve_order"] }
toml_edit.workspace = true
regex.workspace = true
huak-python-manager = { path = "../huak-python-manager" }
huak-home = { path = "../huak-home" }
lazy_static.workspace = true
huak-toolchain = { path = "../huak-toolchain" }
hex.workspace = true
sha2.workspace = true
huak-workspace = { path = "../huak-workspace" }

[dev-dependencies]
huak-dev = { path = "../huak-dev" }

[lints]
workspace = true
