[package]
name = "huak-pyproject-toml"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# pep508_rs = { workspace = true, features = ["serde", "toml"] }
pep508_rs.workspace = true
thiserror.workspace = true
toml_edit.workspace = true

[lints]
workspace = true

[dev-dependencies]
tempfile.workspace = true
