[package]
name = "huak-python-manager"
description = "A Python interpreter management system for Huak."
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.75"
clap.workspace = true
colored.workspace = true
hex = "0.4.3"
human-panic.workspace = true
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
sha2 = "0.10.8"
tar = "0.4.40"
thiserror.workspace = true
zstd = "0.13.0"

[lints]
workspace = true
