[package]
name = "huak-toolchain"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
dunce = "1.0.4"
huak-python-manager = { path = "../huak-python-manager" }
thiserror.workspace = true
toml_edit.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
