[package]
name = "huak"
version = "0.0.19"
edition = "2021"
license = "MIT"
description = "A Python package manager written in Rust inspired by Cargo."
repository = "https://github.com/cnpryer/huak.git"
homepage = "https://github.com/cnpryer/huak.git"
rust-version = "1.69.0"
categories = [
    "development-tools"
]

[dependencies]
clap = { version = "4.3.4", features = ["cargo", "derive"] }
clap_complete = "4.2.1"
colored = "2.0.0"
huak_ops = { path = "../huak_ops"}
human-panic = "1.1.3"
# included to build PyPi Wheels (see .github/workflow/README.md)
openssl = { version = "0.10.52", features = ["vendored"], optional = true }
thiserror = "1.0.40"

[dev-dependencies]
tempfile = "3.5.0"
