[package]
name = "huak"
version = "0.0.19"
edition = "2021"
license = "MIT"
description = "A Python package manager written in Rust inspired by Cargo."
repository = "https://github.com/cnpryer/huak.git"
homepage = "https://github.com/cnpryer/huak.git"
rust-version = "1.69.0"
categories = [
    "development-tools"
]

[dependencies]
clap = { workspace = true }
clap_complete = "4.3.2"
colored = "2.0.4"
glob = { workspace = true }
huak_ops = { path = "../huak_ops"}
human-panic = "1.1.5"
# included to build PyPi Wheels (see .github/workflow/README.md)
openssl = { version = "0.10.52", features = ["vendored"], optional = true }
pep440_rs = { workspace = true }
pep508_rs = { workspace = true }
termcolor = { workspace = true }
thiserror = "1.0.44"

[dev-dependencies]
insta-cmd = "0.3.0"
tempfile = { workspace = true }
