[package]
name = "huak"
version = "0.0.19"
description = "A Python package manager written in Rust and inspired by Cargo."
repository = "https://github.com/cnpryer/huak.git"
homepage = "https://github.com/cnpryer/huak.git"
categories = [
    "development-tools"
]
readme.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
clap = { workspace = true }
clap_complete = "4.4.1"
colored = "2.0.4"
huak_home = { version = "0.0.0", path = "../huak_home" }
huak_package_manager = { path = "../huak_package_manager"}
human-panic = "1.1.5"
# included to build PyPi Wheels (see .github/workflow/README.md)
openssl = { version = "0.10.57", features = ["vendored"], optional = true }
termcolor = { workspace = true }
thiserror = "1.0.48"

[dev-dependencies]
huak_dev = { path = "../huak_dev" }
insta-cmd = "0.4.0"
tempfile = { workspace = true }

[lints]
workspace = true
