[package]
name = "huak_ops"
version = "0.1.0"
edition = "2021"

[lib]
# We currently don't run doctest while the library is private.
doctest = false

[dependencies]
clap = { workspace = true }
git2 = "0.17.2"
glob = { workspace = true }
indexmap = "2.0.0"
pep440_rs = { workspace = true }
pep508_rs = { workspace = true }
pyproject-toml = "0.7.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.104"
termcolor = { workspace = true }
thiserror = { workspace = true }
toml = { version = "0.7.6", features = ["preserve_order"] }
toml_edit = "0.19.4"
regex = "1.9.5"

[dev-dependencies]
tempfile = { workspace = true }