[package]
name = "huak_python_manager"
description = "A Python interpreter management system for Huak."
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
huak_home = { version = "0.0.0", path = "../huak_home" }

[lints]
workspace = true
