[package]
name = "huak_python_manager"
description = "A Python interpreter management system for Huak."
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.75"
clap = { workspace = true }
colored = { workspace = true }
huak_home = { version = "0.0.0", path = "../huak_home" }
human-panic = { workspace = true }
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
tar = "0.4.40"
tempfile = { workspace = true }
zstd = "0.13.0"

[lints]
workspace = true
