[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mock_project"
version = "0.0.1"
description = ""
dependencies = ["click == 8.1.7"]

[[project.authors]]
name = "Chris Pryer"
email = "cnpryer@gmail.com"

[project.optional-dependencies]
dev = [
    "pytest == 7.4.3",
    "ruff",
]

[tool.huak.task]
string = "python -c 'print(\"string\")'"
array = ["python", "-c", "print('array')"]
inline-cmd = { cmd = "python -c 'print(\"cmd\")'" }
inline-args = { args = ["python", "-c", "print('args')"] }
inline-program = { program = "python", args = ["-c", "print('program')"], env = { TESTING_HUAK = "test"} }