[project]
name = "mock_project"
version = "0.0.1"
description = ""

[[project.authors]]
name = "Chris Pryer"
email = "cnpryer@gmail.com"

[project.dependencies]
click = "8.1.3"

[project.dev-dependencies]
black = "22.8.0"

[build-system]
requires = ["huak-core>=1.0.0"]
build-backend = "huak.core.build.api"
